Updated to API version 1.1.1
