# server/swagger_server/models/inline_response200.py
@@ -1,94 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class InlineResponse200(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, apis: List[object]=None, example: object=None):  # noqa: E501
-        """InlineResponse200 - a model defined in Swagger
-
-        :param apis: The apis of this InlineResponse200.  # noqa: E501
-        :type apis: List[object]
-        :param example: The example of this InlineResponse200.  # noqa: E501
-        :type example: object
-        """
-        self.swagger_types = {
-            'apis': List[object],
-            'example': object
-        }
-
-        self.attribute_map = {
-            'apis': 'apis',
-            'example': 'example'
-        }
-
-        self._apis = apis
-        self._example = example
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse200':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def apis(self) -> List[object]:
-        """Gets the apis of this InlineResponse200.
-
-        The array of biothings explorer API calls at the given index   # noqa: E501
-
-        :return: The apis of this InlineResponse200.
-        :rtype: List[object]
-        """
-        return self._apis
-
-    @apis.setter
-    def apis(self, apis: List[object]):
-        """Sets the apis of this InlineResponse200.
-
-        The array of biothings explorer API calls at the given index   # noqa: E501
-
-        :param apis: The apis of this InlineResponse200.
-        :type apis: List[object]
-        """
-
-        self._apis = apis
-
-    @property
-    def example(self) -> object:
-        """Gets the example of this InlineResponse200.
-
-        The result of parsing the example input, if provided   # noqa: E501
-
-        :return: The example of this InlineResponse200.
-        :rtype: object
-        """
-        return self._example
-
-    @example.setter
-    def example(self, example: object):
-        """Sets the example of this InlineResponse200.
-
-        The result of parsing the example input, if provided   # noqa: E501
-
-        :param example: The example of this InlineResponse200.
-        :type example: object
-        """
-
-        self._example = example
